# json-rpc-server

./: .envrc  cabal.project  cabal.project.ci  json-rpc-server.cabal
.github/workflows/: ci.yml
src/Network/JsonRpc/: Server.hs
src/Network/JsonRpc/Server/: Internal.hs  ParamParser.hs
test/Test/Network/JsonRpc/: ParamParserSpec.hs  ServerSpec.hs
